Form to Database Connectivity
***Updated***

--- a/common/Comment.html
+++ b/common/Comment.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <center><div style="width: 50%;border: 5px solid grey;padding: 50px;margin: 10px;border-radius: 35px;box-shadow: 5px 5px 5px grey">
-    <form id="form1" name="form1" method="post" action="">
+    <form id="form1" name="form1" method="post" action="../php/insert.php">
   <center><h2 style="text-shadow: 1px 1px 2px grey">Add a Comment...</h2></center>
     <span style="text-align: left"><br>
     </span>
