--- a/common/Tourpkgs.html
+++ b/common/Tourpkgs.html
@@ -1,82 +1,95 @@
 <html>
+
 <head>
-<link href="../css/Tourpkgs.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="../css/table.css">
-<link href="../css/bootstrap-4.3.1.css" rel="stylesheet" type="text/css">
+    <link href="../css/Tourpkgs.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="../css/table.css">
+    <link href="../css/bootstrap-4.3.1.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
-    <h2 id="tour" class="section-title" style="text-align:  center;text-shadow: 1px 1px 2px grey">Tour Packages</h2>					
-        <br><br>
+    <h2 id="tour" class="section-title" style="text-align:  center;text-shadow: 1px 1px 2px grey">Tour Packages</h2>
+    <br><br>
     <table border="0" width="100%" style="text-align: center;border-top: hidden">
-    <tr>
-        <th>
-            <a href="galle.html" target="_blank">
-                <img src="../img/Tour%20Pkgs/shainee-fernando-RdZ6t41NmE0-unsplash.jpg" width="300" alt="" style="box-shadow: 5px 5px 5px grey">
-            </a>
-        </th>
-        <th>
-            <a href="kandy.html" target="_blank">
-                <img src="../img/Tour%20Pkgs/gettyimages-523287346-2048x20481.jpg" width="300" alt="" style="box-shadow: 5px 5px 5px grey">
-            </a>
-        </th>
-        <th>
-            <a href="ella.html" target="_blank">
-                <img src="../img/Tour%20Pkgs/sri-lanka-photos-0429.jpg.optimal.jpg" width="300" alt="" style="box-shadow: 5px 5px 5px grey">
-            </a>
-        </th>
-        <th>
-            <a href="jaffna.html" target="_blank">
-                <img src="../img/Tour%20Pkgs/louise-burton-fE6zZAyIwKU-unsplash.jpg" width="300" alt="" style="box-shadow: 5px 5px 5px grey">
-            </a>
-        </th>
-        <th>
-            <a href="anuradhapura.html" target="_blank">
-                <img src="../img/Tour%20Pkgs/gettyimages-642791873-2048x20481.jpg" width="300" alt="" style="box-shadow: 5px 5px 5px grey">
-            </a>
-        </th>
-    </tr>
-    <tr>
-        <td>
-            <a href="galle.html" style="text-decoration: none" target="_blank"><span class="item-meta-field" style="font-size: 20px">Amazing Galle</span></a><br><br>
-            <p class="item-title">
-                <font color="grey">HISTORICAL & HERITAGE TOURS</font><br>
+        <tr>
+            <th>
+                <a href="galle.html" target="_blank">
+                    <img src="../img/Tour%20Pkgs/shainee-fernando-RdZ6t41NmE0-unsplash.jpg" width="300" alt=""
+                        style="box-shadow: 5px 5px 5px grey">
+                </a>
+            </th>
+            <th>
+                <a href="kandy.html" target="_blank">
+                    <img src="../img/Tour%20Pkgs/gettyimages-523287346-2048x20481.jpg" width="300" alt=""
+                        style="box-shadow: 5px 5px 5px grey">
+                </a>
+            </th>
+            <th>
+                <a href="ella.html" target="_blank">
+                    <img src="../img/Tour%20Pkgs/sri-lanka-photos-0429.jpg.optimal.jpg" width="300" alt=""
+                        style="box-shadow: 5px 5px 5px grey">
+                </a>
+            </th>
+            <th>
+                <a href="jaffna.html" target="_blank">
+                    <img src="../img/Tour%20Pkgs/louise-burton-fE6zZAyIwKU-unsplash.jpg" width="300" alt=""
+                        style="box-shadow: 5px 5px 5px grey">
+                </a>
+            </th>
+            <th>
+                <a href="anuradhapura.html" target="_blank">
+                    <img src="../img/Tour%20Pkgs/gettyimages-642791873-2048x20481.jpg" width="300" alt=""
+                        style="box-shadow: 5px 5px 5px grey">
+                </a>
+            </th>
+        </tr>
+        <tr>
+            <td>
+                <a href="galle.html" style="text-decoration: none" target="_blank"><span class="item-meta-field"
+                        style="font-size: 20px">Amazing Galle</span></a><br><br>
+                <p class="item-title">
+                    <font color="grey">HISTORICAL & HERITAGE TOURS</font><br>
                     Day Excursions to Galle from Colombo<br>
                     LKR 9,372 per adult
-            </p>
-        </td>
-        <td>
-            <a href="kandy.html" style="text-decoration: none" target="_blank"><span class="item-meta-field" style="font-size: 20px">Beautiful Kandy</span></a><br><br>
-            <p class="item-title">
-                <font color="grey">CULTURAL TOURS</font><br>
+                </p>
+            </td>
+            <td>
+                <a href="kandy.html" style="text-decoration: none" target="_blank"><span class="item-meta-field"
+                        style="font-size: 20px">Beautiful Kandy</span></a><br><br>
+                <p class="item-title">
+                    <font color="grey">CULTURAL TOURS</font><br>
                     Day tour to Kandy from Colombo<br>
                     LKR 9,552 per adult
-            </p>
-        </td>
-        <td>
-            <a href="ella.html" style="text-decoration: none" target="_blank"><span class="item-meta-field" style="font-size: 20px">Magnificent Ella</span></a><br><br>
-            <p class="item-title">
-                <font color="grey">HIKING & CAMPING TOURS</font><br>
+                </p>
+            </td>
+            <td>
+                <a href="ella.html" style="text-decoration: none" target="_blank"><span class="item-meta-field"
+                        style="font-size: 20px">Magnificent Ella</span></a><br><br>
+                <p class="item-title">
+                    <font color="grey">HIKING & CAMPING TOURS</font><br>
                     Iconic Private Day Tour to Ella from Colombo<br>
                     LKR 12,165 per adult
-            </p>
-        </td>
-        <td>
-            <a href="jaffna.html" style="text-decoration: none" target="_blank"><span class="item-meta-field" style="font-size: 20px">Magical Jaffna</span></a><br><br>
-            <p class="item-title">
-                <font color="grey">PRIVATE DAY TRIPS</font><br>
+                </p>
+            </td>
+            <td>
+                <a href="jaffna.html" style="text-decoration: none" target="_blank"><span class="item-meta-field"
+                        style="font-size: 20px">Magical Jaffna</span></a><br><br>
+                <p class="item-title">
+                    <font color="grey">PRIVATE DAY TRIPS</font><br>
                     Full Day Excursion to Jaffna from Colombo<br>
                     LKR LKR 15,859 per adult
-            </p>
-        </td>
-        <td>
-            <a href="anuradhapura.html" style="text-decoration: none" target="_blank"><span class="item-meta-field" style="font-size: 20px">Ancient Anuradhapura</span></a><br><br>
-            <p class="item-title">
-                <font color="grey">WALKING TOURS</font><br>
+                </p>
+            </td>
+            <td>
+                <a href="anuradhapura.html" style="text-decoration: none" target="_blank"><span class="item-meta-field"
+                        style="font-size: 20px">Ancient Anuradhapura</span></a><br><br>
+                <p class="item-title">
+                    <font color="grey">WALKING TOURS</font><br>
                     Explore the Kingdom of A'pura from Colombo<br>
                     LKR 14,868 per adult
-            </p>
-        </td>
-    </tr>
+                </p>
+            </td>
+        </tr>
     </table>
-    </body>
+</body>
+
 </html>
