--- a/index.html
+++ b/index.html
@@ -2,113 +2,13 @@
 <html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="css/table.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>TravelGram</title>
-  <link rel="icon" href="img/Icon/cropped-travel-icon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style type="text/css">
-    .myclass a:link {
-      color: blue;
-    }
-
-
-    a:visited {
-      color: grey;
-    }
-
-
-    a:hover {
-      color: red;
-    }
-
-
-    a:active {
-      color: darkred;
-    }
-
-    .dropdown-content a:hover {
-      background-color: #f1f1f1;
-    }
-
-    .topnav {
-      overflow: hidden;
-      background-color: #e9e9e9;
-    }
-
-
-    .topnav a {
-      float: left;
-      display: block;
-      color: black;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-      font-size: 17px;
-    }
-
-
-    .topnav a:hover {
-      background-color: #ddd;
-      color: black;
-    }
-
-
-    .topnav a.active {
-      background-color: #2196F3;
-      color: white;
-    }
-
-
-    .topnav input[type=text] {
-      float: right;
-      padding: 6px;
-      border: none;
-      margin-top: 8px;
-      margin-right: 16px;
-      font-size: 17px;
-    }
-
-
-    @media screen and (max-width: 600px) {
-
-      .topnav a,
-      .topnav input[type=text] {
-        float: none;
-        display: block;
-        text-align: left;
-        width: 100%;
-        margin: 0;
-        padding: 14px;
-      }
-
-      .topnav input[type=text] {
-        border: 1px solid #ccc;
-      }
-    }
-
-    #mySidenav a {
-      position: absolute;
-      right: -80px;
-      transition: 0.3s;
-      padding: 15px;
-      width: 238px;
-      text-decoration: none;
-      font-size: 18px;
-      color: white;
-      border-radius: 0 5px 5px 0;
-    }
-
-    #mySidenav a:hover {
-      right: 0;
-    }
-
-    #about {
-      top: 150px;
-      background-color: green;
-    }
-  </style>
-  <link href="css/bootstrap-4.3.1.css" rel="stylesheet" type="text/css">
+  <link rel="icon" href="img/Icon/cropped-travel-icon.png">
+  <title>TravelGram</title>
+  <link rel="stylesheet" type="text/css" href="css/table.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap-4.3.1.css">
 </head>
 
 <body>
@@ -207,27 +107,7 @@
     <span class="dot"></span>
   </div>
 
-  <script>
-    var slideIndex = 0;
-    showSlides();
-
-    function showSlides() {
-      var i;
-      var slides = document.getElementsByClassName("mySlides");
-      var dots = document.getElementsByClassName("dot");
-      for (i = 0; i < slides.length; i++) {
-        slides[i].style.display = "none";
-      }
-      slideIndex++;
-      if (slideIndex > slides.length) { slideIndex = 1 }
-      for (i = 0; i < dots.length; i++) {
-        dots[i].className = dots[i].className.replace(" active", "");
-      }
-      slides[slideIndex - 1].style.display = "block";
-      dots[slideIndex - 1].className += " active";
-      setTimeout(showSlides, 2000); // Change image every 2 seconds
-    }
-  </script>
+  <script src="js/scripts.js"></script>
 
   <div id="mySidenav" class="sidenav">
     <a href="#comment" id="about">Write a Comment.......</a>
