--- a/common/contact us & footer.html
+++ b/common/contact us & footer.html
@@ -35,28 +35,28 @@
                 <td width="50%" style="text-align: left">
                     <font id="contact" color="white" size="5pt">Contact Us</font><br><br>
                     <font size="3pt" color="white">HOTLINE : +94 112 311 311 <br>
-                        email :-<a href="https://www.inquiries@travelgram.lk/" target="_blank"
+                        email :-<a href="https://www.inquiries@travelgram.lk/"
                             style="text-decoration: none"> inquiries@travelgram.lk</a> <br>
                         Head Office :- No.504/1, Galle Road, Colombo 04</font><br><br>
-                    <a href="https://www.facebook.com/" target="_blank" style="vertical-align: middle"><img
+                    <a href="https://www.facebook.com/" style="vertical-align: middle"><img
                             src="../img/Social/Facebook.png" width="20"></a>&nbsp;
-                    <a href="https://plus.google.com/" target="_blank" style="vertical-align: middle"><img
+                    <a href="https://plus.google.com/" style="vertical-align: middle"><img
                             src="../img/Social/Google+.png" width="20"></a>&nbsp;
-                    <a href="https://www.instagram.com/" target="_blank" style="vertical-align: middle"><img
+                    <a href="https://www.instagram.com/" style="vertical-align: middle"><img
                             src="../img/Social/Instagram.png" width="20"></a>&nbsp;
-                    <a href="https://www.linkedin.com/" target="_blank" style="vertical-align: middle"><img
+                    <a href="https://www.linkedin.com/" style="vertical-align: middle"><img
                             src="../img/Social/Linkedin.png" width="20"></a>&nbsp;
-                    <a href="https://twitter.com/" target="_blank" style="vertical-align: middle"><img
+                    <a href="https://twitter.com/" style="vertical-align: middle"><img
                             src="../img/Social/Twitter.png" width="20"></a>
                 </td>
                 <td width="20%"></td>
 
                 <td width="80%" style="text-align: left">
                     <font id="contact" color="white" size="5pt">Links</font><br><br>
-                    <font size="3pt" color="white"><a href="../index.html" target="_blank"
+                    <font size="3pt" color="white"><a href="../index.html"
                             style="text-decoration: none">Home</a><br>
-                        <a href="galle.html" target="_blank" style="text-decoration: none">Galle</a><br>
-                        <a href="kandy.html" target="_blank" style="text-decoration: none">Kandy</a><br>
+                        <a href="galle.html" style="text-decoration: none">Galle</a><br>
+                        <a href="kandy.html" style="text-decoration: none">Kandy</a><br>
                     </font>
                 </td>
 
@@ -64,9 +64,9 @@
                 <td width="80%" style="text-align: left">
                     <font id="contact" color="white" size="5pt">Links</font><br><br>
                     <font size="3pt" color="white">
-                        <a href="ella.html" target="_blank" style="text-decoration: none">Ella</a><br>
-                        <a href="jaffna.html" target="_blank" style="text-decoration: none">Jaffna</a><br>
-                        <a href="anuradhapura.html" target="_blank" style="text-decoration: none">Anuradhapura</a><br>
+                        <a href="ella.html" style="text-decoration: none">Ella</a><br>
+                        <a href="jaffna.html" style="text-decoration: none">Jaffna</a><br>
+                        <a href="anuradhapura.html" style="text-decoration: none">Anuradhapura</a><br>
                     </font>
                 </td>
 
@@ -78,13 +78,17 @@
         <table width="100%" border="0" style="border-top-width: thin;vertical-align: middle">
             <tr>
                 <th height="40" style="font-size:12px; font-weight: 600;text-align: center;vertical-align: middle">
-                    <font color="white"> &nbsp;&nbsp; &copy;TravelGram 2019&nbsp;&nbsp;&reg;All Rights
-                        Reserved&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>
-
+                    <span id="datetime"></span>
                 </th>
             </tr>
         </table>
     </footer>
+    <script>
+        const currentYear = new Date().getFullYear();
+        const footerText = document.getElementById('datetime');
+        footerText.textContent = `\u00A9 ${currentYear} Travelgram. All Rights Reserved.`;
+        footerText.style.color = 'white';
+    </script>
 </body>
 
 </html>
