--- a/common/ella.html
+++ b/common/ella.html
@@ -155,7 +155,7 @@
             </div>
           </th>
           <th width="419" height="40" colspan="3" style="font-size:13px; font-weight: 600;text-align: right"> &nbsp;
-            HOTLINE: +94 112 311 311 &nbsp;&nbsp;<a href="https://www.inquiries@travelgram.lk/" target="_blank"
+            HOTLINE: +94 112 311 311 &nbsp;&nbsp;<a href="https://www.inquiries@travelgram.lk/"
               style="text-decoration: none">inquiries@travelgram.lk</a>&nbsp;&nbsp;
           </th>
 
@@ -173,12 +173,12 @@
             <div class="dropdown" style="text-align: center">
               <button class="dropbtn" style="font-size:14px; font-weight: 600;text-align: center">DESTINATIONS</button>
               <div class="dropdown-content">
-                <a href="galle.html" style="text-decoration: none;text-align: center" target="_blank">Galle</a>
-                <a href="kandy.html" style="text-decoration: none;text-align: center" target="_blank">Kandy</a>
+                <a href="galle.html" style="text-decoration: none;text-align: center">Galle</a>
+                <a href="kandy.html" style="text-decoration: none;text-align: center">Kandy</a>
                 <a href="ella.html" style="text-decoration: none;text-align: center">Ella</a>
-                <a href="jaffna.html" style="text-decoration: none;text-align: center" target="_blank">Jaffna</a>
+                <a href="jaffna.html" style="text-decoration: none;text-align: center">Jaffna</a>
                 <a href="anuradhapura.html" style="text-decoration: none;text-align: center"
-                  target="_blank">Anuradhapura</a>
+                 >Anuradhapura</a>
               </div>
             </div>
           </th>
@@ -330,7 +330,7 @@
               <li style="list-style: disc">Sinhala & English speaking chauffeur guide</li>
             </div>
             <div>
-              <p align="right"><a href="Application%20Form.html" target="_blank" style="text-decoration: none;"><button
+              <p align="right"><a href="Application%20Form.html" style="text-decoration: none;"><button
                     class="dropbtn"
                     style="font-size:16px; font-weight: 600;text-align: center;background-color: aqua">Book
                     Now</button></a></p>
