--- a/index.html
+++ b/index.html
@@ -19,16 +19,8 @@
         <tr style="background-color:lightgrey">
           <th height="40" style="font-size:12px; font-weight: 600;text-align: left;border-right:hidden"><a id="myclass"
               href="#this" style="text-decoration: none;">&nbsp;&nbsp; ABOUT US &nbsp;&nbsp;</a></th>
-          <th height="40" colspan="2" style="font-size:12px; font-weight: 600;text-align: left;border-right:hidden">
-            <div class="search-container">
-              <form action="">
-                <input type="text" placeholder="Search..." name="search">&nbsp;
-                <button type="submit">Submit</button>
-              </form>
-            </div>
-          </th>
-          <th width="419" height="40" colspan="3" style="font-size:13px; font-weight: 600;text-align: right"> &nbsp;
-            HOTLINE: +94 112 311 311 &nbsp;&nbsp;<a href="https://www.inquiries@travelgram.lk/" target="_blank"
+          <th width="419" height="40" colspan="5" style="font-size:13px; font-weight: 600;text-align: right"> &nbsp;
+            HOTLINE: +94 112 311 311 &nbsp;&nbsp;<a href="https://www.inquiries@travelgram.lk/"
               style="text-decoration: none">inquiries@travelgram.lk</a>&nbsp;&nbsp;
           </th>
 
@@ -46,12 +38,12 @@
             <div class="dropdown" style="text-align: center">
               <button class="dropbtn" style="font-size:14px; font-weight: 600;text-align: center">DESTINATIONS</button>
               <div class="dropdown-content">
-                <a href="common/galle.html" style="text-decoration: none;text-align: center" target="_blank">Galle</a>
-                <a href="common/kandy.html" style="text-decoration: none;text-align: center" target="_blank">Kandy</a>
-                <a href="common/ella.html" style="text-decoration: none;text-align: center" target="_blank">Ella</a>
-                <a href="common/jaffna.html" style="text-decoration: none;text-align: center" target="_blank">Jaffna</a>
+                <a href="common/galle.html" style="text-decoration: none;text-align: center">Galle</a>
+                <a href="common/kandy.html" style="text-decoration: none;text-align: center">Kandy</a>
+                <a href="common/ella.html" style="text-decoration: none;text-align: center">Ella</a>
+                <a href="common/jaffna.html" style="text-decoration: none;text-align: center">Jaffna</a>
                 <a href="common/anuradhapura.html" style="text-decoration: none;text-align: center"
-                  target="_blank">Anuradhapura</a>
+                 >Anuradhapura</a>
               </div>
             </div>
           </th>
@@ -107,10 +99,8 @@
     <span class="dot"></span>
   </div>
 
-  <script src="js/scripts.js"></script>
-
   <div id="mySidenav" class="sidenav">
-    <a href="#comment" id="about">Write a Comment.......</a>
+    <a href="#comment" id="about">Write a Comment...</a>
   </div>
 
   <hr>
@@ -130,6 +120,7 @@
   <iframe id="footer" src="common/contact%20us%20&%20footer.html" border="0" width="100%" height="400"
     style="border-top: hidden;border-bottom: thin"></iframe>
 
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
