--- a/common/anuradhapura.html
+++ b/common/anuradhapura.html
@@ -135,7 +135,7 @@
       cursor: pointer;
     }
   </style>
-  <link href="../css/bootstrap-4.3.1.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
@@ -147,12 +147,6 @@
           <th height="40" style="font-size:12px; font-weight: 600;text-align: left;border-right:hidden"><a id="myclass"
               href="#gallery" style="text-decoration: none">&nbsp;&nbsp; GALLERY &nbsp;&nbsp;</a></th>
           <th height="40" colspan="2" style="font-size:12px; font-weight: 600;text-align: left;border-right:hidden">
-            <div class="search-container">
-              <form action="">
-                <input type="text" placeholder="Search..." name="search">&nbsp;
-                <button type="submit">Submit</button>
-              </form>
-            </div>
           </th>
           <th width="419" height="40" colspan="3" style="font-size:13px; font-weight: 600;text-align: right"> &nbsp;
             HOTLINE: +94 112 311 311 &nbsp;&nbsp;<a href="https://www.inquiries@travelgram.lk/"
