--- a/common/Application Form.html
+++ b/common/Application Form.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>TravelGram</title>
   <link rel="icon" href="../img/Icon/cropped-travel-icon.png">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.10/dist/sweetalert2.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style type="text/css">
     .myclass a:link {
@@ -87,7 +88,7 @@
       }
     }
   </style>
-  <link href="../css/bootstrap-4.3.1.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
@@ -99,12 +100,6 @@
           <th height="40" style="font-size:12px; font-weight: 600;text-align: left;border-right:hidden"><a id="myclass"
               href="#this" style="text-decoration: none;">&nbsp;&nbsp; BOOK A TOUR&nbsp;&nbsp;</a></th>
           <th height="40" colspan="2" style="font-size:12px; font-weight: 600;text-align: left;border-right:hidden">
-            <div class="search-container">
-              <form action="">
-                <input type="text" placeholder="Search..." name="search">&nbsp;
-                <button type="submit">Submit</button>
-              </form>
-            </div>
           </th>
           <th width="419" height="40" colspan="3" style="font-size:13px; font-weight: 600;text-align: right"> &nbsp;
             HOTLINE: +94 112 311 311 &nbsp;&nbsp;<a href="https://www.inquiries@travelgram.lk/"
@@ -185,35 +180,13 @@
     <span class="dot"></span>
     <span class="dot"></span>
   </div>
-
-  <script>
-    var slideIndex = 0;
-    showSlides();
-
-    function showSlides() {
-      var i;
-      var slides = document.getElementsByClassName("mySlides");
-      var dots = document.getElementsByClassName("dot");
-      for (i = 0; i < slides.length; i++) {
-        slides[i].style.display = "none";
-      }
-      slideIndex++;
-      if (slideIndex > slides.length) { slideIndex = 1 }
-      for (i = 0; i < dots.length; i++) {
-        dots[i].className = dots[i].className.replace(" active", "");
-      }
-      slides[slideIndex - 1].style.display = "block";
-      dots[slideIndex - 1].className += " active";
-      setTimeout(showSlides, 2000); // Change image every 2 seconds
-    }
-  </script>
   <hr>
   <br>
 
   <center>
     <div
       style="width: 55%;border: 5px solid grey;padding: 50px;margin: 10px;border-radius: 20px;box-shadow: 5px 5px 5px grey">
-      <form id="form1" name="form1" method="post" action="">
+      <form id="bookingForm" name="bookingForm" method="post">
         <center>
           <h2 style="text-shadow: 1px 1px 2px grey">Book Now</h2>
         </center>
@@ -226,8 +199,15 @@
                 <td width="20%" height="30" style="text-align: left"> Name
                   <label for="textfield">:</label>
                 </td>
-                <td width="40%" style="text-align: left"><input name="textfield2" type="text" id="textfield2"
-                    form="form1" autocomplete="off" size="80%"></td>
+                <td width="40%" style="text-align: left"><input name="textfield2" type="text" id="name"
+                    form="bookingForm" size="80%"></td>
+              </tr>
+              <tr>
+                <td width="20%" height="30" style="text-align: left"> Email
+                  <label for="textfield">:</label>
+                </td>
+                <td width="40%" style="text-align: left"><input name="textfield2" type="text" id="email"
+                    form="bookingForm" size="80%"></td>
               </tr>
               <tr>
                 <td height="30" style="text-align: left">Destination
@@ -235,7 +215,7 @@
                 </td>
                 <td style="text-align: left">
                   <span style="text-align: left">
-                    <select name="select" id="select">
+                    <select name="select" id="destination">
                       <option selected="selected">Galle</option>
                       <option>Kandy</option>
                       <option>Ella</option>
@@ -249,14 +229,14 @@
                 <td height="30" style="text-align: left">Telephone No
                   <label for="textfield2">:</label>
                 </td>
-                <td style="text-align: left; font-weight: 400;"><input name="textfield" type="text" id="textfield"
+                <td style="text-align: left; font-weight: 400;"><input name="textfield" type="number" id="telephoneNo"
                     size="80%"></td>
               </tr>
               <tr>
                 <td height="30" style="text-align: left">No of Adults
                   <label for="textfield2">:</label>
                 </td>
-                <td style="text-align: left; font-weight: 400;"><input name="textfield" type="text" id="textfield"
+                <td style="text-align: left; font-weight: 400;"><input name="textfield" type="number" id="noOfAdults"
                     size="80%"></td>
               </tr>
               <tr>
@@ -265,7 +245,7 @@
                 </td>
                 <td class="align-content-md-center" style="text-align: left">
                   <span style="text-align: left">
-                    <textarea name="textarea2" cols="82" rows="10" id="textarea2"></textarea>
+                    <textarea name="textarea2" cols="82" rows="10" id="notes"></textarea>
                   </span>
                 </td>
               </tr>
@@ -301,7 +281,33 @@
 
   <iframe id="footer" src="contact%20us%20&%20footer.html" border="0" width="100%" height="400"
     style="border-top: hidden;border-bottom: thin"></iframe>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.10/dist/sweetalert2.all.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+  <script src="../js/firebase.js"></script>
+  <script>
+    var slideIndex = 0;
+    showSlides();
 
-</body>
+    function showSlides() {
+      var i;
+      var slides = document.getElementsByClassName("mySlides");
+      var dots = document.getElementsByClassName("dot");
+      for (i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";
+      }
+      slideIndex++;
+      if (slideIndex > slides.length) {
+        slideIndex = 1
+      }
+      for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+      }
+      slides[slideIndex - 1].style.display = "block";
+      dots[slideIndex - 1].className += " active";
+      setTimeout(showSlides, 2000); // Change image every 2 seconds
+    }
+  </script>
+  </body>
 
 </html>
